samples/_failures_safe/1761152728_17b414_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_683bad20.c: In function ‘main’:
./samples/SAFE/__tmp_683bad20.c:168:38: error: missing terminating " character
  168 |             case STATE_READY: printf("READ
      |                                      ^~~~~
./samples/SAFE/__tmp_683bad20.c:168:13: error: expected expression at end of input
  168 |             case STATE_READY: printf("READ
      |             ^~~~
./samples/SAFE/__tmp_683bad20.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_683bad20.c:168:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_683bad20.c:168:13: error: expected declaration or statement at end of input
